--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -34,7 +34,7 @@ ul, li {
 }
 
 .dotBox a {
-    display:block; 
+    display:block;
     width:15px; 
     height:15px; 
     background:url("/images/dots4.png") no-repeat; 
@@ -63,13 +63,23 @@ body {
 #header h1 {
     position: absolute;
     top: 50%;
-    margin-top: -44px;
+    margin-top: -4em;
+    left: 50%;
+    margin-left: -6em;
+}
+
+#header svg {
+    position: absolute;
+    top: 50%;
+    margin-top: -8em;
+    margin-left: -12em;
     left: 50%;
 }
 
 /* line-menu */
 nav {
     width: 100%;
+    padding: 40px 0;
 }
 
 nav ul {
@@ -80,20 +90,20 @@ nav ul {
 nav ul li {
     display: inline;
 
-    padding-right: 40px;
-    padding-left: 40px;
-    
-    border-right: 1px solid black;
+    padding-right: 10px;
+    padding-left: 10px;
 
     font-size:18px;
     line-height:10px;
     font-weight:1;
     line-height: 28px;
+
+    border-right: 1px solid gray;
     
     cursor: pointer;
 }
 
-nav ul li:last-child {
+nav ul li:first-child, li:last-child {
     border-right: none;
 }
 /* /line-menu */
@@ -109,10 +119,10 @@ nav ul li:last-child {
 
 .poster {
     position: absolute;
-    top:40px;
-    left:150px;
-    right:0;
-    text-align:left;
+    top: 40px;
+    left: 150px;
+    right: 0;
+    text-align: left;
 }
 
 .poster img {
@@ -122,7 +132,7 @@ nav ul li:last-child {
 .poster2 {
     position: absolute;
     top: 330px;
-    left:150px;
+    left: 150px;
     text-align:left;
 }
 
