--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -14,16 +14,21 @@ ul, li {
 .imgBox {
     position:relative; 
     margin:0 auto;
+    width: 100%;
+    height: 100%;
+            z-index: 0;
 }
 
 .imgBox li {
     position:absolute;
+    width: auto;
 }
 
+
 .dotBox {
-    position:absolute; 
-    top:250px; 
-    left: 150px; 
+    position: absolute;
+    top: 500px;
+    left: 150px;
     margin:0 auto;
     width:60px; 
     z-index:3;
@@ -46,8 +51,10 @@ ul, li {
 };
 
 body {
-    font-family: 'Droid Serif', serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 16px;
+                letter-spacing: 1px;
+            line-height: 1.4;
     color: #2d2d2d;
 }
 
@@ -58,22 +65,35 @@ body {
 
 .container img {
     width: 100%;
+    height: 100%
 }
 
 #header h1 {
     position: absolute;
+    width:30%;
     top: 50%;
-    margin-top: -4em;
-    left: 50%;
-    margin-left: -6em;
+    margin-top: 3em;
+    left: 51%;
+    margin-left: -25.5em;
+    
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+    letter-spacing: 1px;
+    line-height: 1.4;
+    font-weight:3;
+    color: #2d2d2d;
+    
+    z-index: 5;
 }
 
 #header svg {
     position: absolute;
     top: 50%;
-    margin-top: -8em;
-    margin-left: -12em;
+    margin-top: 1.2em;
+    margin-left: -33em;
     left: 50%;
+    width: 200px;
+        z-index: 6;
 }
 
 /* line-menu */
@@ -83,29 +103,55 @@ nav {
 }
 
 nav ul {
-    width: 100%;
-    text-align: center;
+    width: 98%;
+    text-align: right;
+            z-index: 2;
 }
 
 nav ul li {
     display: inline;
 
-    padding-right: 10px;
-    padding-left: 10px;
+    padding-right: 1%;
+    padding-left: 1%;
 
-    font-size:18px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 9px;
+    letter-spacing: 1px;
+    line-height: 1.4;
+    color: #2d2d2d;
     line-height:10px;
     font-weight:1;
     line-height: 28px;
-
-    border-right: 1px solid gray;
-    
-    cursor: pointer;
-}
+    cursor: pointer;        
+    z-index: 3;
+    }
 
 nav ul li:first-child, li:last-child {
     border-right: none;
 }
+
+
+.first {
+        position: absolute;
+    width: 88%;
+    padding: 40px 0;
+        z-index: 3;
+}
+
+.icon {
+        position: absolute;
+    width: 98%;
+    padding: 44px 0 ;
+        z-index: 3;
+}
+.icon img {
+width:9px;}
+
+
+
+
+
+
 /* /line-menu */
 
 /*
@@ -131,13 +177,13 @@ nav ul li:first-child, li:last-child {
 
 .poster2 {
     position: absolute;
-    top: 330px;
+    top: 400px;
     left: 150px;
     text-align:left;
 }
 
 .poster2 img {
-    width: 80%;
+    width: 60%;
 }
 
 /*
